feat: Header was added for full dimension. Pixel Perfect - OK.

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,8 +1,10 @@
+$lightGreen: #e3fbdd //+
+$bgSecond: #eefdea //+
 $dark: #131313
 $black: #181818
-$primary: #e3b873
-$light: #fff
-$darkGray: #363636
+$primary: #ff5a3c //+
+$light: #fff //+
+$darkGray: #38393b //+
 $gray: #959595
 $silver: #545454
 $isValid: #67b589
