--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -1,6 +1,6 @@
 main
   width: 100%
-  background-color: $dark
+  background-color: $light
   display: flex
   flex-direction: column
   align-items: center
@@ -10,7 +10,7 @@ main
 
 .container
   width: 100%
-  max-width: 1276px
+  max-width: 1170px
 
 .row
   width: 100%
