--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -5,15 +5,14 @@ button, input
 .button
   width: 100%
   height: 100%
-  max-width: 14.786rem
-  max-height: 3.643rem
-  padding: 1.357rem 1.857rem
+  max-width: 11.875rem
+  max-height: 2.6875rem
   border: none
-  border-radius: 2px
-  text-transform: uppercase
-  font-family: 'Futura Demi', sans-serif
+  border-radius: 1.34375rem
+  font-family: 'Ubuntu', serif
   font-weight: 500
-  font-size: 0.9em
+  font-size: 1em
+  color: $light
   &:hover
     cursor: pointer
   &--primary
