--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -2,18 +2,22 @@
   box-sizing: border-box
 
 html
-  font-size: 14px
+  font-size: 16px
 
 body
-  font-family: 'Futura Book', sans-serif
+  font-family: 'Ubuntu', sans-serif
   font-size: 1rem
   margin: 0
+
+button
+  cursor: pointer
 
 img
   max-width: 100%
 
 a
   text-decoration: none
+  cursor: pointer
 
 .section
   padding: 60px 0
