--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -3,65 +3,102 @@
   left: 0
   top: 0
   width: 100%
+  max-height: 4,6875rem
   z-index: 99
-  background-color: $dark
+  background-color: $light
   padding: 0 5.71rem
   display: flex
   align-items: flex-start
   justify-content: center
   &__container
     display: flex
-    justify-content: flex-start
+    justify-content: space-between
 
 .menu
   width: 100%
-  max-width: 1256px
   display: flex
   justify-content: space-between
   align-items: center
-  padding: 1.571rem 0
+  padding: 1,9375rem 0
   &__logo
+    background-color: transparent
     margin: 0
+    margin-right: 12.5rem
     &:hover
       text-shadow: 0px 5px 15px rgba($primary, .2)
   &__nav
     margin-left: 0rem
   &__contacts
+    width: 100%
     display: flex
     align-items: center
+    justify-content: flex-start
   &--footer
     padding: 0
 
 
 .logo
-  font-family: 'Futura Demi', cursive
-  color: $primary
-  text-transform: uppercase
-  text-decoration: none
-  font-size: 1rem
+  display: flex
+  flex-direction: row
+  margin: 0
+  padding: 0
+  justify-content: center
+  align-items: center
+  &__img
+    max-width: 2.563rem
+    max-height: 2.563rem
+    margin-right: 0.813rem
+  &__mark
+    font-family: 'Ubuntu', serif
+    font-size: 1.625rem
+    font-weight: 700
+    letter-spacing: 1.02px
+    color: $darkGray
+
+
 
 .nav
-  padding-left: 1.2rem
+  display: flex
+  justify-content: space-between
+  align-items: center
+  padding-left: 12.2rem
   &__item
-    font-family: 'Futura Book', cursive
+    position: relative
+    max-width: 23.0625rem
+    margin-right: 1.5rem
+    font-family: 'Ubuntu', serif
     font-size: 1rem
-    font-weight: normal
-    text-decoration: none
-    color: $light
+    font-weight: 300
+    font-size: 1rem
+    color: $darkGray
     text-transform: uppercase
-    margin-right: 2.65rem
-    transition: color .2s
     &:hover
-      color: $primary
+      &::after
+        content: ''
+        background-color: $primary
+        height: 2px
+        width: 100%
+        max-width: 4.6875rem
+        position: absolute
+        bottom: -0.375rem
+        left: 0
+        right: 0
+        margin: auto
+      
 
 .phone
-  color: $primary
+  color: $darkGray
   &:hover
     text-shadow: 0px 5px 15px rgba($primary, .3)
 
 .contacts
   &__phone
     min-width: 9rem
-    margin-right: 3.214rem
+    margin-left: 1.25rem
+    margin-right: 3rem
+    font-family: 'Ubuntu', serif
+    font-size: 1.125rem
+    font-weight: 500
+    color: $darkGray
   &__button
     margin-right: 0
