--- a/css/style.css
+++ b/css/style.css
@@ -415,23 +415,25 @@ button:active, button:focus, input:active, input:focus {
   outline: none; }
 
 .button {
-  width: 100%;
-  height: 100%;
-  max-width: 11.875rem;
-  max-height: 2.6875rem;
-  border: none;
+  min-width: 11.875rem;
+  min-height: 2.6875rem;
+  border: 2px solid #ff5a3c;
   border-radius: 1.34375rem;
+  text-align: center;
   font-family: 'Ubuntu', serif;
   font-weight: 500;
   font-size: 1em;
   color: #fff; }
   .button:hover {
-    cursor: pointer; }
+    box-sizing: border-box;
+    cursor: pointer;
+    border: 2px solid #ff5a3c;
+    background-color: transparent;
+    color: #ff5a3c; }
   .button--primary {
     background-color: #ff5a3c;
     color: #fff;
-    box-shadow: 0px 5px 15px rgba(255, 90, 60, 0.2);
-    transition: box-shadow .3s; }
+    transition: background-color .3s; }
     .button--primary:hover {
       box-shadow: none; }
   .button--outline {
@@ -440,11 +442,6 @@ button:active, button:focus, input:active, input:focus {
     color: #fff; }
     .button--outline:hover {
       box-shadow: 0px 5px 15px rgba(255, 255, 255, 0.2); }
-  .button--contacts {
-    max-width: 11.5rem;
-    max-height: 2.643rem;
-    padding: 0.8rem 1.429rem;
-    vertical-align: center; }
   .button__scroll-up {
     width: auto;
     height: auto;
@@ -510,7 +507,7 @@ button:active, button:focus, input:active, input:focus {
 .input.invalid {
   background-color: rgba(189, 90, 79, 0.1); }
 
-*, *:before, *:after {
+*, *:before, *:after, *:hover {
   box-sizing: border-box; }
 
 html {
@@ -642,10 +639,10 @@ a {
   .menu__nav {
     margin-left: 0rem; }
   .menu__contacts {
-    width: 100%;
+    min-width: 26.9375rem;
     display: flex;
     align-items: center;
-    justify-content: flex-start; }
+    justify-content: space-between; }
   .menu--footer {
     padding: 0; }
 
@@ -671,11 +668,16 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 12.2rem; }
+  width: 100%;
+  max-width: 23.0625rem; }
+  .nav__container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%; }
   .nav__item {
     position: relative;
     max-width: 23.0625rem;
-    margin-right: 1.5rem;
     font-family: 'Ubuntu', serif;
     font-size: 1rem;
     font-weight: 300;
@@ -700,9 +702,8 @@ a {
     text-shadow: 0px 5px 15px rgba(255, 90, 60, 0.3); }
 
 .contacts__phone {
-  min-width: 9rem;
-  margin-left: 1.25rem;
-  margin-right: 3rem;
+  min-width: 9.5rem;
+  margin-left: 2.75rem;
   font-family: 'Ubuntu', serif;
   font-size: 1.125rem;
   font-weight: 500;
