--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,23 +3,25 @@ button, input
     outline: none
     
 .button
-  width: 100%
-  height: 100%
-  max-width: 11.875rem
-  max-height: 2.6875rem
-  border: none
+  min-width: 11.875rem
+  min-height: 2.6875rem
+  border: 2px solid $primary
   border-radius: 1.34375rem
+  text-align: center
   font-family: 'Ubuntu', serif
   font-weight: 500
   font-size: 1em
   color: $light
   &:hover
+    box-sizing: border-box
     cursor: pointer
+    border: 2px solid $primary
+    background-color: transparent
+    color: $primary
   &--primary
     background-color: $primary
     color: $light
-    box-shadow: 0px 5px 15px rgba($primary, .2)
-    transition: box-shadow .3s
+    transition: background-color .3s
     &:hover
       box-shadow: none
   &--outline
@@ -28,11 +30,6 @@ button, input
     color: $light
     &:hover
       box-shadow: 0px 5px 15px rgba($light, .2)
-  &--contacts
-    max-width: 11.5rem
-    max-height: 2.643rem
-    padding: 0.8rem 1.429rem
-    vertical-align: center
   &__scroll-up
     width: auto
     height: auto
