--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -29,10 +29,10 @@
   &__nav
     margin-left: 0rem
   &__contacts
-    width: 100%
+    min-width: 26.9375rem
     display: flex
     align-items: center
-    justify-content: flex-start
+    justify-content: space-between
   &--footer
     padding: 0
 
@@ -61,11 +61,16 @@
   display: flex
   justify-content: space-between
   align-items: center
-  padding-left: 12.2rem
+  width: 100%
+  max-width: 23.0625rem
+  &__container
+    display: flex
+    justify-content: flex-end
+    align-items: center
+    width: 100%
   &__item
     position: relative
     max-width: 23.0625rem
-    margin-right: 1.5rem
     font-family: 'Ubuntu', serif
     font-size: 1rem
     font-weight: 300
@@ -93,9 +98,8 @@
 
 .contacts
   &__phone
-    min-width: 9rem
-    margin-left: 1.25rem
-    margin-right: 3rem
+    min-width: 9.5rem
+    margin-left: 2.75rem
     font-family: 'Ubuntu', serif
     font-size: 1.125rem
     font-weight: 500
