--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -5,7 +5,7 @@ $black: #181818
 $primary: #ff5a3c //+
 $light: #fff //+
 $darkGray: #38393b //+
-$gray: #959595
-$silver: #545454
+$gray: #363636 //+
+$silver: #2e2e2d //+
 $isValid: #67b589
 $isInvalid: #bd5a4f
