--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -12,6 +12,9 @@ button, input
   font-weight: 500
   font-size: 1em
   color: $light
+  background-color: $primary
+  transition: background-color .3s
+  transition: color .3s
   &:hover
     box-sizing: border-box
     cursor: pointer
@@ -19,11 +22,10 @@ button, input
     background-color: transparent
     color: $primary
   &--primary
-    background-color: $primary
-    color: $light
-    transition: background-color .3s
-    &:hover
-      box-shadow: none
+    width: 100%
+    height: 100%
+    max-width: 13.6875rem
+    max-height: 3.0625rem
   &--outline
     border: 1px solid $light
     background-color: transparent
@@ -84,11 +86,13 @@ button, input
 
 .input
   background-color: transparent
-  border: none
-  border-bottom: 1px solid rgba(54, 54, 54, 0.3)
-  font-size: 1.285rem
-  color: $light
-  padding: 0.5rem 0
+  border: 1px solid #b1b0b0
+  border-radius: 10px
+  font-family: 'Ubuntu', serif
+  font-size: 1rem
+  line-height: 1rem
+  color: #878585
+  padding: 0.75rem 1.125rem
 
 .success
   background-color: rgba($isValid, 0.1)
