--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -17,7 +17,8 @@ img
 
 a
   text-decoration: none
-  cursor: pointer
+  &:hover
+    cursor: pointer
 
 .section
   padding: 60px 0
@@ -31,10 +32,6 @@ a
     color: $light
   &-title
     text-align: center
-    text-transform: uppercase
-    font-family: 'Yeseva One', cursive
-    font-size: 20px
-    font-weight: normal
     &--light
       color: $light
     &--left
