--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -5,7 +5,7 @@
   width: 100%
   max-height: 4,6875rem
   z-index: 99
-  background-color: $light
+  background-color: transparent
   padding: 0 5.71rem
   display: flex
   align-items: flex-start
