--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -8,7 +8,7 @@
   right: 0
   width: 100%
   height: 100%
-  background-color: rgba($dark, .6)
+  background-color: transparent
   z-index: 199
   display: flex
   align-items: center
@@ -23,7 +23,7 @@
   right: 0
   width: 100%
   height: 100%
-  background-color: rgba($dark, .6)
+  background-color: transparent
   z-index: 199
   display: flex
   align-items: center
@@ -40,20 +40,12 @@
     visibility: visible
   &__dialog
     position: relative
-    background: $dark url('../img/bg-lines.svg') no-repeat center
-    padding: 2.357rem 3.5rem 1.928rem 3.5rem
+    background: $light
+    padding: 2.4375rem 3.125rem 1.75rem 3.125rem
     color: $light
-    max-width: 36.357rem
-  &__close
-    position: absolute
-    top: 0
-    right: 0
-    width: 28px
-    height: 28px
-    background: transparent url('../img/ico/x-circle.svg') no-repeat center
-    border: none
-    margin: 12px
-    cursor: pointer
+    width: 100%
+    max-width: 23.1875rem
+    box-shadow: 0 0 7px 6px rgba(34, 34, 34, 0.05)
   &__title
     font-family: 'Yeseva One', cursive
     font-size: 1.357rem
@@ -68,22 +60,23 @@
   &__form
     display: flex
     flex-direction: column
+    justify-content: space-between
+    align-items: center
+    max-height: 10.375rem
   &__input
-    // margin-bottom: 3.428rem
-    // &:last-of-type
-    //   margin-bottom: 1rem
     &-group
       display: flex
       flex-direction: column
       position: relative
-      margin-bottom: 3.3rem
-      &:nth-of-type(3)
-        margin-bottom: 0rem
-    &--light
-      &::placeholder
-        font-family: 'Futura Book', cursive
-        color: $light
-        opacity: 1
+      margin-bottom: 1.12rem
+      width: 100%
+      // &:nth-of-type(3)
+      //   margin-bottom: 0rem
+    // &--light
+    //   &::placeholder
+    //     font-family: 'Futura Book', cursive
+    //     color: $light
+    //     opacity: 1
   &__policy
     position: relative
     margin-bottom: 2.7rem
@@ -91,7 +84,8 @@
       left: 0
       bottom: -1.5rem
   &__button
-    align-self: flex-end
+    width: 100%
+    max-width: 11.8125rem
     &--OK
       padding: 0.5rem
       font-size: 1rem
@@ -101,7 +95,7 @@ div
     background-color: rgba(red, 0.3)
     color: $light
     text-align: center
-    padding: 1px
+    padding: 0
     right: 0
     bottom: -1.3rem
 .policy
