--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -17,12 +17,19 @@ main
   max-width: 1170px
   display: flex
   align-items: flex-start
-  justify-content: space-between
+  justify-content: flex-start
   flex-wrap: wrap
 
 .col
   &-30
-    flex-basis: 32%
+    display: flex
+    flex-basis: 33%
+    &:nth-child(3n+1)
+      justify-content: flex-start
+    &:nth-child(3n+2)
+      justify-content: center
+    &:nth-child(3n+3)
+      justify-content: flex-end
   &-50
     flex-basis: 50%
     max-width: 50%
@@ -40,10 +47,12 @@ main
   flex-direction: column
   align-items: center
   justify-content: space-between
-  padding-top: 1.7rem
-  padding-bottom: 0.3rem
-  padding-left: 1.4rem
-  padding-right: 2.4rem
+  width: 100%
+  max-width: 22.1875rem
+  padding-top: 1rem
+  padding-bottom: 1rem
+  padding-left: 1.3rem
+  padding-right: 1.3rem
   border: none
   box-shadow: none
   &__img
@@ -53,7 +62,7 @@ main
     flex-direction: row
     justify-content: center
     align-items: flex-end
-    margin-bottom: 1.25rem
+    margin-bottom: 1rem
   &__title
     font-family: 'Ubuntu', serif
     font-size: 1.25rem
@@ -61,10 +70,12 @@ main
     margin: 0
     margin-bottom: 1.25rem
   &__description
+    max-width: 19.5rem
     font-family: 'Ubuntu', serif
     font-size: 1rem
     font-weight: 300
     line-height: 1.375rem
+    word-spacing: -1px
     text-align: center
     color: #454646
 
