--- a/sass/templates/_advantages.sass
+++ b/sass/templates/_advantages.sass
@@ -29,13 +29,15 @@
     justify-content: center
     align-items: center
     padding-top: 5rem
+    padding-bottom: 6rem
   &__section-title
     margin: 0
-    margin-bottom: 2rem
+    margin-bottom: 1.6rem
     font-family: 'Ubuntu', serif
     font-size: 2.625rem
     font-weight: 700
     color: #2c2c2d
+    overflow: hidden
     &__text
       margin: 0
       width: 100%
@@ -46,7 +48,7 @@
       line-height: 1.375rem
       color: #2c2c2d
       text-align: center
-      padding-bottom: 1.8rem
+      padding-bottom: 3.1rem
 .indicators
   width: 100%
   height: 100%
@@ -78,69 +80,3 @@
     font-size: 1.375rem
     font-weight: 700
     color: #383736
-  
-//   &__video
-//     margin: auto
-//     display: flex
-//     margin-bottom: 4.428rem
-//     justify-content: center
-//     align-items: center
-//     position: relative
-//     max-width: 58.357rem
-//     min-height: 31rem
-//     background: $dark url('../img/video-preview.jpg') center no-repeat
-//     box-shadow: 0px 20px 50px rgba($dark, 0.15)
-//     &::before
-//       position: absolute
-//       left: 0
-//       top: 0
-//       content: ''
-//       width: 100%
-//       height: 100%
-//       background-color: rgba($dark, 0.8)
-//   &__text
-//     max-width: 40.786rem
-//     margin: auto
-//     margin-bottom: 4.285rem
-//     text-align: center
-//     font-size: 1.428rem
-//     line-height: 2.4rem
-//     &::before
-//       display: block
-//       content: ''
-//       width: 55px
-//       height: 2px
-//       margin: auto
-//       margin-bottom: 2.5rem
-//       border-radius: 30px
-//       background-color: $primary
-//   &__form
-//     display: flex
-//     flex-wrap: wrap
-//     max-width: 55rem
-//     margin: auto
-//     justify-content: space-between
-//   &__input-group
-//     display: flex
-//     flex-direction: column
-//     position: relative
-//     flex-basis: 30%
-//   &__input
-//     color: $darkGray
-//     &::placeholder
-//       color: $darkGray
-//   &__label
-//     color: rgba($dark, 0.5)
-//     margin-bottom: -7px
-//   &__button
-//     padding: 1.286rem 4.786rem
-//   &__policy
-//     flex-basis: 100%
-//     margin-top: 1.2rem
-//     position: relative
-//     &-label
-//       justify-content: center
-// .video
-//   &__play
-//     position: relative
-//     cursor: pointer
