--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -25,6 +25,8 @@ a
   width: 100%
   display: flex
   justify-content: center
+  &__services
+    margin-bottom: 8rem
   &--dark
     padding-top: 11rem
     padding-left: 2rem
