--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -32,22 +32,6 @@ button, input
     color: $light
     &:hover
       box-shadow: 0px 5px 15px rgba($light, .2)
-  &__scroll-up
-    width: auto
-    height: auto
-    padding: 0.5rem
-    &__container
-      width: 100vw
-    &__flex-block
-      position: fixed
-      left: 0
-      bottom: 0
-      display: flex
-      justify-content: center
-      z-index: 299
-      width: 100%
-      &--hidden
-        visibility: hidden
   &Return
     padding: 1rem 3rem
     color: $light
@@ -77,7 +61,36 @@ button, input
       margin-right: 0.64rem
     &--center
       justify-content: center
-  
+.menu
+  &__scroll
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 1,9375rem 0
+    &__flex-block
+      position: fixed
+      left: 0
+      top: 0
+      width: 100%
+      max-height: 4.6875rem
+      z-index: 99
+      background-color: rgba($light, 0.7)
+      padding: 0 5.71rem
+      display: flex
+      align-items: flex-start
+      justify-content: center
+      &--hidden
+        visibility: hidden
+    &__container
+      display: flex
+      justify-content: space-between
+      width: 100%
+      display: flex
+      justify-content: space-between
+      align-items: center
+      padding: 1,9375rem 0
+
 .label
   font-size: 1.07rem
   &--light
