--- a/sass/templates/_costcalc.sass
+++ b/sass/templates/_costcalc.sass
@@ -1,50 +1,60 @@
-.projects
-  padding-bottom: 30rem
+.cost-calc
   &__section
-    &--dark
-      padding-top: 5rem
-.swiper
+    margin: 0
+    background: $light url('../img/bg-img-costcalc.jpg') no-repeat center / cover
+    padding: 5.3125rem 0 4.5625rem 0
   &__container
-    justify-content: space-between
-  &-slide
     display: flex
-    flex-wrap: wrap
-    padding-bottom: 4.6rem
-    &__text
-      flex-basis: 40%
-      margin-bottom: 2.42rem
-      padding-bottom: 0.5rem
-      padding-right: 1rem
-    &__heading
-      font-size: 1.285rem
-      line-height: 1.78rem
-      font-family: 'Yeseva One', cursive
-      color: $primary
+    justify-content: flex-start
+    width: 100%
+    max-width: 73.125rem
+    max-height: 37.3125rem
+    background: $light url('../img/coscalc-form-bg.jpg') no-repeat center / cover
+  &__wrap
+    width: 100%
+    max-width: 40rem
+    padding: 5rem 3rem 10rem 3rem
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    align-items: center
+  &__title
+    width: 100%
+    text-align: center
+    font-family: 'Ubuntu', serif
+    font-size: 1.875rem
+    font-weight: 500
+    color: #2d2d2c
+    margin: 0 0 2.5rem 0
+  &__input-group
+    position: relative
+    width: 100%
+    display: flex
+    flex-direction: column
+    &:last-of-type
+      margin-bottom: 1.5rem
+  &__form
+    width: 100%
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    &__label
+      width: 100%
+      font-family: 'Ubuntu', serif
+      font-size: 1.125rem
+      font-weight: 300
+      color: #939292
+      text-align: left
       text-transform: uppercase
-      margin-bottom: 0.642rem
-  &-pagination
-    bottom: -3px
-    &-bullet
-      background-color: rgba($light, 0.3)
-      height: 9px
-      width: 9px
-      &-active
-        background-color: $light
-  &-button
-    &-prev, &-next
-      bottom: 0
-      top: auto
-      background-size: 42px
-      width: 42px
-      height: 14px
-      &::after
-        display: none
-    &-prev
-      background: url('../img/ico/arrow-left.svg') no-repeat center
-      left: 0
-    &-next
-      background: url('../img/ico/arrow-right.svg') no-repeat center
-
-.swiper-container-horizontal>.swiper-pagination-bullets
-  width: auto
-  bottom: -4px
+      margin-bottom: 0.2rem
+  &__input
+    border: none
+    border-bottom: 1px solid #464544
+    border-radius: 0
+    padding: 0.3125rem 0
+    margin-bottom: 1.2rem
+  &__button
+    text-align: center
+    margin: auto
+  
